if admins_id > 1

--- a/aiogram_bot.ini
+++ b/aiogram_bot.ini
@@ -1,3 +1,4 @@
 [aiogram_bot]
 TOKEN = YOUR_TOKEN_HERE
-ADMIN_ID = YOUR_ADMIN_ID_HERE
+ADMINS_ID = YOUR_ADMIN_IDS_HERE
+#if admins_id > 1 use [] ; example: [1111, 2222]
